[package]
name = "cytra_gb_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = { version = "0.1", optional = false }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
panic = "abort"